Add html and js for login, register, forgot password

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,8 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/components/angular-translate/angular-translate.min.js"></script>
+    <script src="lib/components/ngstorage/ngStorage.min.js"></script>
+    <script src="lib/components/angular-resource/angular-resource.min.js"></script>
     <script src="lib/components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -36,6 +38,7 @@
     <script src="js/routes.js"></script>
     <script src="js/config.js"></script>
     <script src="js/services/services.js"></script>
+    <script src="js/services/api.js"></script>
 
     <!-- controllers -->
     <script src="js/controllers/controllers.js"></script>
@@ -43,6 +46,10 @@
     <script src="js/controllers/projects/new.js"></script>
     <script src="js/controllers/projects/process.js"></script>
     <script src="js/controllers/projects/archive.js"></script>
+
+    <script src="js/controllers/auth/login.js"></script>
+    <script src="js/controllers/auth/register.js"></script>
+    <script src="js/controllers/auth/forgot.js"></script>
 
   </head>
   <body ng-app="starter">
